# paqarin

./: .flake8  .gitignore  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  env_state.txt  install-requirements.txt  install_paqarin.bat  mypy.ini  optional-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
examples/: 20230907_Using_TimeGAN_by_YData.ipynb  20230914_Using_DoppleGANger_by_YData.ipynb  dopplenganger_example.py  timevae_example.py
paqarin/: __init__.py  adapter.py  evaluation.py  generator.py
paqarin/adapters/: README  __init__.py  sdv_adapter.py  synthcity_adapter.py  ydata_adapter.py
paqarin/generators/: README  __init__.py  doppleganger.py  par.py  timegan.py  timevae.py
paqarin/metrics/: README  __init__.py  multivariate_metrics.py  univariate_metrics.py
paqarin/utils/: README  __init__.py  cloud_trainer.py  data_plots.py  data_utils.py
tests/: __init__.py  test_adapter.py  test_data_utils.py  test_doppleganger.py  test_evaluation.py  test_multivariate_metrics.py  test_par.py  test_sdv_adapter.py  test_synthcity_adapter.py  test_timegan.py  test_univariate_metrics.py  test_ydata_adapter.py
